modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="row">
-          <div class="media mt-5">
+          <div class="media mt-2">
             <img src="https://avatars3.githubusercontent.com/u/46869157?s=460&u=c26930b67f11277b29c9704d922d7e0c35f1c373&v=4" class="m-3" alt="image" width="75px" height="75px">
             <div class="media-body m-2">
               <h5 class="align-items-center mt-2">Mehmet Serdar</h5>
@@ -33,7 +33,7 @@
               </div>
         </div>
     </div>
-    <div class="footer mt-2 text-center">
+    <div class="footer pb-5 text-center">
       <hr/>
       <h6>Made with <i class="fa fa-heart fa-lg text-danger"> </i> in Istanbul, Türkiye</h6>
       <h6>
