modified:   index.html 	modified:   script.js 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -1,46 +1,57 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>Mehmet Serdar</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">    
-    <link rel="stylesheet" href="style.css">
+  <title>Mehmet Serdar</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div class="container">
-        <div class="row">
-          <div class="media mt-2">
-            <img src="https://avatars3.githubusercontent.com/u/46869157?s=460&u=c26930b67f11277b29c9704d922d7e0c35f1c373&v=4" class="m-3" alt="image" width="75px" height="75px">
-            <div class="media-body m-2">
-              <h5 class="align-items-center mt-2">Mehmet Serdar</h5>
-              <p>Simplicity is wit.<br>
-              I'm a developer based in Istanbul, Türkiye.</p>
-            </div>
-          </div>
-            <div class="col-md-12 text-center">
-                <h6>const tryAgain = (attempt) => { if(succces){ return } tryAgain(attempt +1) }</h6>
-                <ul id="links" class="list-group">
-
-                    <!-- Link items will be dynamically added here -->
-                </ul>
-            </div>
-              <div class="col-md-12 text-center">
-                  <h6 class="pt-4">My Github Repositories</h6>
-                  <ul id="repos" class="list-group">
-                      <!-- Repository items will be dynamically added here -->
-                  </ul>
-              </div>
+  <div class="container">
+    <div class="row">
+      <div class="media mt-2">
+        <img
+          src="https://avatars3.githubusercontent.com/u/46869157?s=460&u=c26930b67f11277b29c9704d922d7e0c35f1c373&v=4"
+          class="m-3" alt="image" width="75px" height="75px">
+        <div class="media-body m-2">
+          <h5 class="align-items-center mt-2">Mehmet Serdar</h5>
+          <p>Simplicity is wit.<br>
+            I'm a developer based in Istanbul, Türkiye.</p>
         </div>
-    </div>
-    <div class="footer pb-5 text-center">
-      <hr/>
-      <h6>Made with <i class="fa fa-heart fa-lg text-danger"> </i> in Istanbul, Türkiye</h6>
-      <h6>
-        Developed By Mehmet Serdar        
-      </h6>
-    </div>
+      </div>
+      <div class="col-md-12 text-center">
+        <h6>const tryAgain = (attempt) => { if(succces){ return } tryAgain(attempt +1) }</h6>
+        <ul id="links" class="list-group">
 
-    <script src="script.js"></script>
+          <!-- Link items will be dynamically added here -->
+        </ul>
+      </div>
+      <div class="col-md-12 text-center">
+        <h6 class="pt-4">My Netlify Projects</h6>
+        <ul id="netlify" class="list-group">
+          <!-- Netlify items will be dynamically added here -->
+        </ul>
+      </div>
+      <div class="col-md-12 text-center">
+        <h6 class="pt-4">My Github Repositories</h6>
+        <ul id="repos" class="list-group">
+          <!-- Repository items will be dynamically added here -->
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="footer pb-5 text-center">
+    <hr />
+    <h6>Made with <i class="fa fa-heart fa-lg text-danger"> </i> in Istanbul, Türkiye</h6>
+    <h6>
+      Developed By Mehmet Serdar
+    </h6>
+  </div>
+
+  <script src="script.js"></script>
 </body>
+
 </html>
