modified:   index.html 	modified:   script.js 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
           <!-- Repository items will be dynamically added here -->
         </ul>
       </div>
+
+      <div class="col-md-12" id="commits">
+        <h6 class="pl-1">Commits</h6>
+        <ul class="list-group text-center"></ul>
+      </div>
+
     </div>
   </div>
   <div class="footer pb-5 text-center">
